# Praxis-Agent-Server

./: .gitignore  Cargo.toml  README.en.md  README.md  anthropic.go  config.go  go.mod  jsonx.go  language.go  main.go  openai.go  port_test.go  process.go  proxy.go  rag.go  start.example.sh  stream.go  tools.go
cmd/lmstudio-forward/: main.go
internal/agentloop/: runner.go  runner_test.go
internal/anthropic/: anthropic.go  convert.go  convert_test.go  handler.go  handler_test.go  rag.go  stream.go
internal/config/: config.go  config_test.go
internal/jsonx/: jsonx.go
internal/language/: language.go  language_test.go
internal/openai/: openai.go
internal/process/: process.go
internal/proxy/: proxy.go  proxy_test.go
internal/rag/: client.go  rag.go  rag_test.go
internal/server/: server.go
internal/stream/: stream.go
internal/tools/: convert.go  inject.go  jsonrepair.go  response.go  streamparser.go  tools.go  tools_test.go
src/: anthropic.rs  config.rs  language.rs  main.rs  openai.rs  process.rs  proxy.rs  rag.rs  stream.rs  tools.rs
